--- a/index.html
+++ b/index.html
@@ -1,21 +1,174 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>test</title>
 
- <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="css/style.css" type="text/css">
+ <meta charset="utf-8">
+ <title>Eastwood</title>
+ <script src="https://kit.fontawesome.com/8d6d6a959e.js" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   </head>
+
   <body>
 
-  <h1> hello</h1>
+    <div class="mainImg" style="background-image:url(image/maincmp.jpg);">
+      <!-- # code for the navigation bar -->
+      <div class="navbar " id="myTopnav">
+        <a href="#" class="active">Eastwood</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Faculty</a>
+        <a href="#">Student</a>
+        <a class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+    </div>
+    <div class="sklname">
+      <h1>Eastwood</h1>
+    </div>
+
+    <!-- second navigation bar -->
+    <div class="mainnav m-row" id="myMainnav">
+      <div class="m-col mainnav-home" href="#">Eastwood</div>
+      <div class="m-col" href="#">News</div>
+      <div class="m-col" href="#">Facilities</div>
+      <div class="m-col" href="#">Academic</div>
+      <div class="m-col" href="#">Capmus Life</div>
+      <div class="m-col" href="#">Admission</div>
+      <div class="m-col" href="#">Help Desk</div>
+      <div class="m-col mainnav-icon" onclick="navfunction()"> <i class="fa fa-bars"></i></div>
+    </div>
+
+    <!--- Facilities introduction stared---------->
+    <div class="sec-intro">
+      <h1>Lorem ipsum</h1>
+      <p>Lorem ipsum dolor sit amet,egestas eleifend. In non scelerisque mi. Fusce sit amet sem sit amet lorem mattis tincidunt. Sed sit amet nibh hendrerit, facilisis purus nec, malesuada arcu. Donec malesuada nulla sit amet suscipit iaculis</p>
+    </div>
+    <!--   code for main-card used for Facilities- -->
+    <div class="main-card">
+
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/class.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+
+        </div>
+      </div>
 
 
- <h2 id = 'h2tag'> Click me to change </h2>
 
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/ground.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+        </div>
+      </div>
+
+
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/library.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+        </div>
+      </div>
+    </div>
+
+
+
+
+    <div class="sec-intro" style="background-color:#272727; color:white;">
+      <h1>Lorem ipsum</h1>
+      <p>Lorem ipsum dolor sit amet,egestas eleifend. In non scelerisque mi. Fusce sit amet sem sit amet lorem mattis tincidunt. Sed sit amet nibh hendrerit, facilisis purus nec, malesuada arcu. Donec malesuada nulla sit amet suscipit iaculis</p>
+    </div>
+    <!-- ############-starting acadmic here######### -->
+
+
+    <div class="main-card">
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/acad-1.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+        </div>
+      </div>
+
+
+
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/acad-2.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+        </div>
+      </div>
+
+      <div class="main-card-sub">
+        <div class="main-card-image">
+          <img src="image/acad-3.jpg" alt="">
+        </div>
+        <div class="main-card-content">
+          <h2>blanditiis praesentium</h2>
+          <p>olorum fuga. Et harum quidem rerum facilis est et expedita distinctio.odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos Nam libero tempore, cum soluta nobis est eligendi</p>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- ############## campus life ######## -->
+
+    <div class="campus">
+      <div class="slideshow-container">
+
+        <div class="mySlides fade">
+          <img src="image/camp-1.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+          <img src="image/camp-2.jpg" style="width:100%">
+        </div>
+
+        <div class="mySlides fade">
+          <img src="image/camp-3.jpg" style="width:100%">
+        </div>
+
+      </div>
+      <br>
+
+      <div style="text-align:center">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+
+    </div>
+    <!-- ##################### -->
+    <!-- ######################## footer ########### -->
+
+    <div class="footer">
+      <a href=""><i class="social-img fab fa-facebook-f"></i></a>
+      <a href=""><i class="social-img fab fa-instagram"></i></a>
+      <a href=""><i class="social-img fab fa-twitter"></i></a>
+      <a href=""><i class="social-img far fa-envelope"></i></a>
+      <p>© Copyright 2020 Eastwood</p>
+    </div>
+
+  </body>
 
 
     <script src="jscr/function.js" charset="utf-8"></script>
-  </body>
 </html>
